Integrate web proxy and AI chat into main site, fix AI API with Cohere

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <li><a href="#" id="nav-games" class="nav-link">Games</a></li>
                     <li><a href="#" id="nav-movies" class="nav-link">Movies/TV</a></li>
                     <li><a href="Sports/index.html" id="nav-sports" class="nav-link">Live Sports</a></li>
-                    <li><a href="addons/web-proxy/index.html" id="nav-proxy" class="nav-link" target="_blank">Web Proxy</a></li>
-                    <li><a href="addons/ai-chat/index.html" id="nav-chat" class="nav-link" target="_blank">AI Chat</a></li>
+                    <li><a href="#" id="nav-proxy" class="nav-link">Web Proxy</a></li>
+                    <li><a href="#" id="nav-chat" class="nav-link">AI Chat</a></li>
                 </ul>
             </nav>
         </div>
